Fixed array index out of bound exception.

--- a/src/main/java/org/ednovo/gooru/client/mvp/classpages/edit/editclasspage.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/classpages/edit/editclasspage.css
@@ -887,7 +887,7 @@ margin-left:-1px;
 
 .assignmentProgress{
 	text-align: center;
-	font-size: 14px; 
+	font-size: 12px; 
 /*	font-weight: bold;	*/
 	margin:15px;
 	margin-bottom: 19px;
